    got marked as a duplicate during processing. This reproduces #349407.
  * apport/crashdb_impl/launchpad.py, update(): Intercept and ignore IOErrors
    when changing the bug priority. This happens if a bug gets duplicated
    underneath us. (LP: #349407)
  * apport/crashdb.py, get_crashdb(): Print syntax errors from parsing
    conf.d/*.conf to stderr.

 -- Martin Pitt <martin.pitt@ubuntu.com>  Thu, 12 Mar 2009 12:22:50 +0100

apport (0.145) jaunty; urgency=low

  * apport/crashdb_impl/launchpad.py: Fix typo in previous upload.
  * debian/local/apport-collect: Do not crash on
    launchpadlib.errors.HTTPError, but give a proper error message and point
    out that this script needs "change anything" privileges. (LP: #338201)
  * apport_python_hook.py: Fix crash for already existing reports, and make
    behaviour equivalent to bin/apport: Silently exit for existing unseen
    crash report, and overwrite existing seen crash report. Add test cases.
    (LP: #323714)
  * general-hooks/automatix.py: Refuse to send bug reports when ultamatix is
    installed.

 -- Martin Pitt <martin.pitt@ubuntu.com>  Tue, 10 Mar 2009 18:45:34 +0100

apport (0.144) jaunty; urgency=low

  * apport/crashdb_impl/launchpad.py, mark_retrace_failed(): If report is
    invalid, remove CoreDump.gz and other attachments.
  * bin/apport-retrace: If we didn't find the ExecutablePath on the system
    because the package is out of date, don't crash, but close the bug as
    invalid.

 -- Martin Pitt <martin.pitt@ubuntu.com>  Tue, 10 Mar 2009 10:45:56 +0100

apport (0.143) jaunty; urgency=low

  * debian/apport.README.Debian: Document how to temporarily and permanently
    enable crash interception.
  * backends/packaging-apt-dpkg.py, is_distro_package(): Do not consider a
    package a native distro one if installed version is "None". This happens
    with some PPA packages. (LP: #252734)
  * apport/report.py, anonymize(): Move user name anonymization into the